--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="images/image7.jpg" class="d-block w-100" alt="...">
+                        <img src="image7.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/foundyou.jpg" class="d-block w-100" alt="...">
+                        <img src="foundyou.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/spaceships.jpg" class="d-block w-100" alt="...">
+                        <img src="spaceships.jpg" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-bs-slide="prev">
@@ -132,7 +132,7 @@
             </div>
             <!-- <div class="col-1"></div> -->
             <div class="col-6">
-              <div data-aos="fade-out"><img src="images/welcome1.jpg" alt="" class="rounded img-fluid d-block"></div>
+              <div data-aos="fade-out"><img src="welcome1.jpg" alt="" class="rounded img-fluid d-block"></div>
             </div>
         </div>
     </div>
@@ -160,7 +160,7 @@
         <div class="row">
             <!-- <div class="col-1"></div> -->
             <div class="col-6">
-              <div data-aos="fade-out"><button type="button" class="btn" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top"><a href="https://www.instagram.com/TheMiniRoom_pod/"><img src="images/podcast.jpg" alt="" class="img-fluid d-block rounded long-img"></a></button></div>
+              <div data-aos="fade-out"><button type="button" class="btn" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top"><a href="https://www.instagram.com/TheMiniRoom_pod/"><img src="podcast.jpg" alt="" class="img-fluid d-block rounded long-img"></a></button></div>
               <div data-aos="fade-out"></div>
             </div>
             <!-- <div class="col-1"></div> -->
@@ -192,7 +192,7 @@
         </div>
         <div class="row">
             <div class="col-5">
-              <div data-aos="fade-out"><button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top"><a href="https://www.twitch.tv/goatlover626"><img src="images/twitch.jpg" alt="" class="img-fluid"></a></button></div>
+              <div data-aos="fade-out"><button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top"><a href="https://www.twitch.tv/goatlover626"><img src="twitch.jpg" alt="" class="img-fluid"></a></button></div>
             </div>
             <div class="col-7">
               <div data-aos="fade-left"><p class="font-words text-center">My life has contained video games for as long as I can remember. Dating back to the Playstation 1 and being excited to make a WWE character on the Smackdown vs Raw game on Playstation 2, video games has always been there for me. It was the way I bonded with friends and family and the way I’d break the ice with people. Even now video games are a big part of my life as I converted to PC coming from console. Now with this new PC power I am able to download new games and play with more friends. With this new PC power I can stream my games of and conversations around Counter-Strike, GTA 5, and Jackbox with people around the world. Come join the conversation by clicking the twitch picture!</p></div>
@@ -209,19 +209,19 @@
         <div class="p-4">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
-                  <a class="nav-link active grow" aria-current="page" href="https://twitter.com/itsrazza1"><img src="images/twitter.png" alt="" width="30" height="24"></a>
+                  <a class="nav-link active grow" aria-current="page" href="https://twitter.com/itsrazza1"><img src="twitter.png" alt="" width="30" height="24"></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link grow" href="https://www.instagram.com/itsrazza/?hl=en"><img src="images/IG.png" alt="" width="30" height="30"></a>
+                  <a class="nav-link grow" href="https://www.instagram.com/itsrazza/?hl=en"><img src="IG.png" alt="" width="30" height="30"></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link grow" href="https://www.twitch.tv/goatlover626"><img src="images/twitch.png" alt="" width="30" height="30"></a>
+                  <a class="nav-link grow" href="https://www.twitch.tv/goatlover626"><img src="twitch.png" alt="" width="30" height="30"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link grow" href="https://open.spotify.com/artist/1ITkLCo1ZWi8ln5u9BsGXl?si=SRoRdKshTB2arEzHQE_L0Q"><img src="images/spotify.png" alt="" width="30" height="30"></a>
+                    <a class="nav-link grow" href="https://open.spotify.com/artist/1ITkLCo1ZWi8ln5u9BsGXl?si=SRoRdKshTB2arEzHQE_L0Q"><img src="spotify.png" alt="" width="30" height="30"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link grow" href="https://itunes.apple.com/us/artist/razza/1492643980"><img src="images/applemusic.png" alt="" width="23" height="23"></a>
+                    <a class="nav-link grow" href="https://itunes.apple.com/us/artist/razza/1492643980"><img src="applemusic.png" alt="" width="23" height="23"></a>
                 </li>
         </div>
     </footer>
