--- a/gallary.html
+++ b/gallary.html
@@ -25,19 +25,19 @@
     <div class="container-fluid">
         <ul class="nav justify-content-center nav-fill fonty">
             <li class="nav-item">
-              <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://twitter.com/itsrazza1"><img src="images/twitter.png" alt="" width="30" height="30" class="d-inline-block align-top">@itsrazza1</a></button>
+              <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://twitter.com/itsrazza1"><img src="twitter.png" alt="" width="30" height="30" class="d-inline-block align-top">@itsrazza1</a></button>
             </li>
             <li class="nav-item">
-                <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://www.instagram.com/itsrazza/?hl=en"><img src="images/IG.png" alt="" width="30" height="30" class="d-inline-block align-top">itsrazza</a></button>
+                <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://www.instagram.com/itsrazza/?hl=en"><img src="IG.png" alt="" width="30" height="30" class="d-inline-block align-top">itsrazza</a></button>
             </li>
             <li class="nav-item">
-                <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://www.twitch.tv/goatlover626"><img src="images/twitch.png" alt="" width="30" height="30" class="d-inline-block align-top">Goatlover626</a></button>
+                <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://www.twitch.tv/goatlover626"><img src="twitch.png" alt="" width="30" height="30" class="d-inline-block align-top">Goatlover626</a></button>
             </li>
             <li class="nav-item">
-                <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://open.spotify.com/artist/1ITkLCo1ZWi8ln5u9BsGXl?si=SRoRdKshTB2arEzHQE_L0Q"><img src="images/spotify.png" alt="" width="30" height="30" class="d-inline-block align-top">Razza Music</a></button>
+                <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://open.spotify.com/artist/1ITkLCo1ZWi8ln5u9BsGXl?si=SRoRdKshTB2arEzHQE_L0Q"><img src="spotify.png" alt="" width="30" height="30" class="d-inline-block align-top">Razza Music</a></button>
             </li>
             <li class="nav-item">
-                <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://itunes.apple.com/us/artist/razza/1492643980"><img src="images/applemusic.png" alt="" width="30" height="30" class="d-inline-block align-top">Razza Music</a></button>
+                <button class="btn btn-dark grow"><a class="navbar-brand text-white h2" aria-current="page" href="https://itunes.apple.com/us/artist/razza/1492643980"><img src="applemusic.png" alt="" width="30" height="30" class="d-inline-block align-top">Razza Music</a></button>
             </li>
           </ul>
     </div>
@@ -53,13 +53,13 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-4">
-                <img src="images/image1.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
+                <img src="image1.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
             </div>
             <div class="col-4">
-                <img src="images/image4.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
+                <img src="image4.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
             </div>
             <div class="col-4">
-                <img src="images/image2.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
+                <img src="image2.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
             </div>
         </div>
         <div class="row">
@@ -67,23 +67,23 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="images/image3.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
+                <img src="image3.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
             </div>
             <div class="col-4">
-                <img src="images/Background.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
+                <img src="Background.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
             </div>
             <div class="col-4">
-                <img src="images/image6.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
+                <img src="image6.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
             </div>
         <div class="row">
             <div class="col-12 p-5"></div>
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="images/image7.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
+                <img src="image7.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
             </div>
             <div class="col-4">
-                <img src="images/image5.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
+                <img src="image5.jpg" alt="" class="img-fluid border border-warning shadow bg-white rounded">
             </div>
         </div>
         <div class="row">
